--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,12 @@
 ---
+import Header from '../components/Header.astro';
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+
 ---
 
 <Layout title="SpaceX Launches">
 	<main>
-		<h1 class="text-6xl text-white font-bold">SpaceX Launches 🚀</h1>
+		<Header />
 	</main>
 </Layout>
 
