--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,10 @@
 ---
-import Header from '../components/Header.astro';
 import Layout from '../layouts/Layout.astro';
+import Header from '../components/Header.astro';
 
 ---
 
 <Layout title="SpaceX Launches">
-	<main>
-		<Header />
-	</main>
+	<p>Pagina principal</p>
 </Layout>
 
