--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.astro';
-
+import Layout from "../layouts/Layout.astro"
+import Launches from "../components/Launches.astro"
 ---
 
 <Layout title="SpaceX Launches">
-	<p>Pagina principal</p>
+  <Launches />
 </Layout>
-
