--- a/src/components/Launches.astro
+++ b/src/components/Launches.astro
@@ -1,5 +1,6 @@
 ---
 import { type APISpaceXResponse } from "../types/api"
+import CardLaunch from "./CardLaunch.astro"
 
 const res = await fetch("https://api.spacexdata.com/v5/launches/query", {
   method: "POST",
@@ -16,11 +17,14 @@ const { docs: launches } = (await res.json()) as APISpaceXResponse
 
 <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
   {
-    launches.map((launch) => (
-      <article>
-        <img src={launch.links.patch.small} alt="name" />
-        <h2>Launch #{launch.id}</h2>
-      </article>
+    launches.map(({ id, links, details, flight_number, success }) => (
+      <CardLaunch
+        id={id}
+        img={links.patch.small}
+        details={details}
+        flightNumber={flight_number}
+        success={success}
+      />
     ))
   }
 </div>
