dynamic pages and view transitions

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -32,7 +32,7 @@ console.log("javascript")
         ></path><path d="M7 14a6 6 0 0 0 -3 6a6 6 0 0 0 6 -3"></path><path
           d="M15 9m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path></svg
       >
-      Últimos lanzamientos
+      Latest releases
     </HeaderButton>
     <HeaderButton href="/about">
       <svg
@@ -48,7 +48,7 @@ console.log("javascript")
           d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"></path><path d="M12 9h.01"
         ></path><path d="M11 12h1v4h1"></path></svg
       >
-      Sobre el proyecto
+      About the project
     </HeaderButton>
     <HeaderButton href="/oldest">
       <svg
@@ -64,7 +64,7 @@ console.log("javascript")
           d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"></path><path d="M12 7v5l3 3"
         ></path></svg
       >
-      Los más viejos
+      The oldest
     </HeaderButton>
   </nav>
 </header>
