--- a/src/pages/launch/[id].astro
+++ b/src/pages/launch/[id].astro
@@ -1,28 +1,22 @@
 ---
 import Layout from "../../layouts/Layout.astro"
-import { getLatestLaunches, getLaunchBy } from "../../services/spacex"
+import { getLaunchBy } from "../../services/spacex"
 const { id } = Astro.params
-
-console.log({ id })
 
 let launch
 if (id) {
   launch = await getLaunchBy({ id })
 }
-
-export async function getStaticPaths() {
-  const launches = await getLatestLaunches()
-
-  return launches.map((launch) => ({
-    params: { id: launch.id }
-  }))
-}
-
-console.log(launch)
 ---
 
 <Layout title={`Lanzamiento ${id}`}>
-  <article>
-    {launch?.id}
+  <article class="flex flex-col gap-y-4 justify-center items-center">
+    <img
+      class="w-52 h-auto"
+      src={launch?.links?.patch.small}
+      alt={launch?.name}
+    />
+    <h2 class="text-4xl font-bold">Launch #{launch?.flight_number}</h2>
+    <p class="text-lg">{launch?.details}</p>
   </article>
 </Layout>
